cabal-version:      3.0
name:               fractal-openapi
version:            0.1.0.0
synopsis:           Comprehensive JSON Schema and OpenAPI 3.x library
description:        A type-safe, comprehensive library for JSON Schema (draft-04 through 2020-12)
                    and OpenAPI 3.x support. Features include:
                    .
                    * High-performance validation with detailed error reporting
                    * Extensible vocabulary system for custom keywords
                    * Template Haskell-based code generation with pluggable strategies
                    * Multi-version schema support with automatic version detection
                    * Servant and Yesod framework integration
                    * HasSchema typeclass for schema reflection
license:            BSD-3-Clause
author:             Ian Duncan
maintainer:         ian@iankduncan.com
category:           Web, Data
build-type:         Simple
extra-source-files: README.md, SPEC.md
data-files:         data/metaschemas/2019-09/*.json
                  , data/metaschemas/2020-12/*.json

source-repository head
  type:     git
  location: https://github.com/iand675/fractal
  subdir:   fractal-openapi

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-home-modules
                 -Wpartial-fields -Wredundant-constraints
                 -Wunused-packages

common extensions
    default-extensions: OverloadedStrings
                      , OverloadedRecordDot
                      , RecordWildCards
                      , DeriveGeneric
                      , DerivingStrategies
                      , DerivingVia
                      , LambdaCase
                      , GeneralizedNewtypeDeriving
                      , RankNTypes
                      , ScopedTypeVariables
                      , BlockArguments
                      , TypeApplications
                      , GADTs
                      , StandaloneDeriving
                      , DeriveAnyClass

library
    import:           warnings, extensions
    exposed-modules:  Fractal.JSONPointer
                    , Fractal.JsonSchema
                    , Fractal.JsonSchema.Types
                    , Fractal.JsonSchema.Parser
                    , Fractal.JsonSchema.Parser.Extended
                    , Fractal.JsonSchema.Renderer
                    , Fractal.JsonSchema.Validator
                    , Fractal.JsonSchema.Metadata
                    , Fractal.JsonSchema.Dialect
                    , Fractal.JsonSchema.Vocabulary
                    , Fractal.JsonSchema.ReferenceLoader
                    , Fractal.JsonSchema.EmbeddedMetaschemas
                    , Fractal.JsonSchema.Regex
                    -- Basic Keywords
                    , Fractal.JsonSchema.Keywords.Type
                    , Fractal.JsonSchema.Keywords.Enum
                    , Fractal.JsonSchema.Keywords.Const
                    -- String Keywords
                    , Fractal.JsonSchema.Keywords.MinLength
                    , Fractal.JsonSchema.Keywords.MaxLength
                    , Fractal.JsonSchema.Keywords.Pattern
                    -- Numeric Keywords
                    , Fractal.JsonSchema.Keywords.Minimum
                    , Fractal.JsonSchema.Keywords.Maximum
                    , Fractal.JsonSchema.Keywords.MultipleOf
                    , Fractal.JsonSchema.Keywords.ExclusiveMinimum
                    , Fractal.JsonSchema.Keywords.ExclusiveMaximum
                    -- Array Keywords
                    , Fractal.JsonSchema.Keywords.MinItems
                    , Fractal.JsonSchema.Keywords.MaxItems
                    , Fractal.JsonSchema.Keywords.UniqueItems
                    -- Object Keywords
                    , Fractal.JsonSchema.Keywords.Required
                    , Fractal.JsonSchema.Keywords.MinProperties
                    , Fractal.JsonSchema.Keywords.MaxProperties
                    -- Legacy/Compatibility Keywords
                    , Fractal.JsonSchema.Keywords.Numeric
                    , Fractal.JsonSchema.Keywords.String
                    , Fractal.JsonSchema.Keywords.Format
                    -- Standard Registry
                    , Fractal.JsonSchema.Keywords.Standard
                    , Fractal.JsonSchema.Keywords.Registry
                    , Fractal.JsonSchema.Keywords.Navigation
                    -- Draft-04 Specific
                    , Fractal.JsonSchema.Keywords.Draft04.Minimum
                    , Fractal.JsonSchema.Keywords.Draft04.Maximum
                    , Fractal.JsonSchema.Keywords.Draft04.ExclusiveMinimum
                    -- Applicator Keywords (composition and conditional)
                    , Fractal.JsonSchema.Keywords.AllOf
                    , Fractal.JsonSchema.Keywords.AnyOf
                    , Fractal.JsonSchema.Keywords.OneOf
                    , Fractal.JsonSchema.Keywords.Not
                    , Fractal.JsonSchema.Keywords.Conditional
                    -- Pluggable Architecture Modules
                    , Fractal.JsonSchema.Keyword
                    , Fractal.JsonSchema.Keyword.Types
                    , Fractal.JsonSchema.Keyword.Compile
                    , Fractal.JsonSchema.Keyword.Validate
                    , Fractal.JsonSchema.Keyword.Monadic
                    , Fractal.JsonSchema.Vocabulary.Types
                    , Fractal.JsonSchema.Vocabulary.Registry
                    , Fractal.JsonSchema.Vocabulary.Validation
                    , Fractal.JsonSchema.Validator.Result
                    , Fractal.JsonSchema.Validator.Extended
                    , Fractal.JsonSchema.Codegen.Types
                    -- OpenAPI
                    , Fractal.OpenApi
                    , Fractal.OpenApi.Types
                    , Fractal.OpenApi.Parser
                    , Fractal.OpenApi.Renderer
                    , Fractal.OpenApi.Validator
                    , Fractal.OpenApi.Codegen
                    , Fractal.OpenApi.Codegen.Core
                    , Fractal.OpenApi.Codegen.Strategy
                    , Fractal.OpenApi.Codegen.TH
                    , Fractal.OpenApi.Codegen.Aeson
    build-depends:    base >= 4.17.0.0 && < 5
                    , aeson >= 2.0 && < 3
                    , text >= 2.0 && < 3
                    , bytestring >= 0.11 && < 1
                    , base64-bytestring >= 1.2 && < 2
                    , containers >= 0.6 && < 1
                    , unordered-containers >= 0.2 && < 1
                    , vector >= 0.13 && < 1
                    , scientific >= 0.3 && < 1
                    , hashable >= 1.4 && < 2
                    , yaml >= 0.11 && < 1
                    , uri-bytestring >= 0.3 && < 1
                    , uri-templater >= 1.0.0 && < 2
                    , ecma262-regex
                    , idn

                    -- Monad transformers
                    , transformers >= 0.5 && < 1

                    -- Template Haskell & Embedded Resources
                    , template-haskell >= 2.19 && < 3
                    , th-lift >= 0.8 && < 1
                    , file-embed >= 0.0.15 && < 1
                    , filepath >= 1.4 && < 2
                    , mtl >= 2.2 && < 3
                    , http-client >= 0.7 && < 1
                    , http-client-tls >= 0.3 && < 1
                    , network-uri >= 2.6 && < 3
                    , uuid >= 1.3 && < 2
                    , time >= 1.12 && < 2
                    , timerep >= 2.1 && < 3
                    , email-validate >= 2.3 && < 3
                    , iproute >= 1.7 && < 2
    hs-source-dirs:   src
    default-language: GHC2021

test-suite fractal-openapi-test
    import:           warnings, extensions
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    Fractal.JsonSchema.ParserSpec
                    , Fractal.JsonSchema.ValidatorSpec
                    , Fractal.JsonSchema.VocabularySpec
                    , Fractal.JsonSchema.DialectSpec
                    , Fractal.JsonSchema.ComplianceSpec
                    , Fractal.JsonSchema.IntegrationSpec
                    , Fractal.JsonSchema.JSONPointerSpec
                    , Fractal.JsonSchema.EmbeddedMetaschemasSpec
                    , Fractal.JsonSchema.Keyword.KeywordSpec
                    , Fractal.JsonSchema.Parser.ExtendedSpec
                    , Fractal.JsonSchema.Validator.ExtendedSpec
                    , Fractal.JsonSchema.Vocabulary.RegistrySpec
                    , Fractal.JsonSchema.Vocabulary.ValidationSpec
                    , Fractal.OpenApi.ParserSpec
                    , Fractal.OpenApi.ValidatorSpec
                    , Fractal.OpenApi.Codegen.THSpec
                    , Fractal.OpenApi.Codegen.StrategySpec
                    , Fractal.OpenApi.Codegen.AesonSpec
                    , Fractal.OpenApi.Codegen.IntegrationSpec
    build-tool-depends: hspec-discover:hspec-discover >= 2.11 && < 3
    build-depends:    base >= 4.17.0.0 && < 5
                    , fractal-openapi
                    , hspec >= 2.11 && < 3
                    , hedgehog >= 1.4 && < 2
                    , hspec-hedgehog >= 0.0.1 && < 1
                    , QuickCheck >= 2.14 && < 3
                    , aeson >= 2.0 && < 3
                    , text >= 2.0 && < 3
                    , bytestring >= 0.11 && < 1
                    , base64-bytestring >= 1.2 && < 2
                    , containers >= 0.6 && < 1
                    , yaml >= 0.11 && < 1
                    , filepath >= 1.4 && < 2
                    , directory >= 1.3 && < 2
                    , scientific >= 0.3 && < 1
                    , vector >= 0.13 && < 1
