cabal-version:      3.0
name:               fractal-stream
version:            0.1.0.0
synopsis:           Event streaming library with Redis/Kinesis backends
description:        A high-level streaming interface implementing event sourcing patterns,
                    supporting both Redis (for local development) and Kinesis (for production).
                    Features include exactly-once delivery via outbox pattern, schema versioning,
                    and support for building event-sourced projections.
license:            BSD-3-Clause
author:             Ian Duncan
maintainer:         ian@iankduncan.com
category:           Database, Streaming
build-type:         Simple

source-repository head
  type:     git
  location: https://github.com/iand675/fractal

common warnings
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
                 -Wincomplete-uni-patterns -Wmissing-home-modules
                 -Wpartial-fields -Wredundant-constraints

common extensions
    default-extensions: OverloadedStrings
                      , OverloadedRecordDot
                      , RecordWildCards
                      , DeriveGeneric
                      , DerivingStrategies
                      , LambdaCase
                      , GeneralizedNewtypeDeriving
                      , RankNTypes
                      , ScopedTypeVariables
                      , BlockArguments

library
    import:           warnings, extensions
    exposed-modules:  Fractal.Stream
                    , Fractal.Stream.Types
                    , Fractal.Stream.Class
                    , Fractal.Stream.Backend.Redis
                    , Fractal.Stream.Outbox
    build-depends:    base >= 4.17.0.0 && < 5
                    , fractal-layer
                    , fractal-schema
                    , aeson >= 2.0 && < 3
                    , async >= 2.2 && < 3
                    , atomic-counter >= 0.1 && < 1
                    , atomic-primops >= 0.8 && < 1
                    , auto-update >= 0.2 && < 1
                    , bytestring >= 0.11 && < 1
                    , containers >= 0.6 && < 1
                    , crypton >= 0.34 && < 1
                    , memory >= 0.18 && < 1
                    , hedis >= 0.15 && < 1
                    , hasql >= 1.6 && < 2
                    , hasql-th >= 0.4 && < 1
                    , hasql-transaction >= 1.0.0 && < 2
                    , http-client >= 0.7 && < 1
                    , http-client-tls >= 0.3 && < 1
                    , hs-opentelemetry-api >= 0.1 && < 1
                    , ki >= 1.0 && < 2
                    , lens >= 5.0 && < 6
                    , primitive >= 0.7 && < 1
                    , resourcet >= 1.2 && < 2
                    , mtl >= 2.2 && < 3
                    , stm >= 2.5 && < 3
                    , text >= 2.0 && < 3
                    , time >= 1.12 && < 2
                    , uuid >= 1.3 && < 2
                    , validation-selective >= 0.1 && < 1
                    , vector >= 0.13 && < 1
                    , unliftio >= 0.2 && < 1
                    , contravariant-extras >= 0.3 && < 1
                    , selective >= 0.5 && < 1
                    , servant >= 0.19 && < 1
                    , servant-server >= 0.19 && < 1
                    , servant-client >= 0.19 && < 1
                    , servant-client-core >= 0.19 && < 1
                    , transformers >= 0.5 && < 0.7
                    , wai >= 3.2 && < 4
                    , warp >= 3.3 && < 4
                    , hashable >= 1.4 && < 2
                    , unordered-containers >= 0.2 && < 1
                    , profunctors >= 5.6 && < 6
                    , random >= 1.2 && < 2
                    , vinyl >= 0.14 && < 1
                    , yesod-core >= 1.6 && < 2
                    , free >= 5.1 && < 6
                    , avro >= 0.6 && < 1

    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                      , RecordWildCards
                      , DeriveGeneric
                      , DerivingStrategies
                      , LambdaCase
                      , GeneralizedNewtypeDeriving
                      , RankNTypes

executable fractal-stream-example
    import:           warnings, extensions
    main-is:          Main.hs
    hs-source-dirs:   examples/redis
    build-depends:    base >=4.17.0.0
                    , fractal-stream
                    , aeson
                    , hedis
                    , hasql
                    , text
                    , time
                    , validation-selective
    default-language: Haskell2010

-- executable layer-example
--     import:           warnings, extensions
--     main-is:          LayerExample.hs
--     hs-source-dirs:   examples
--     build-depends:    base >=4.17.0.0
--                     , fractal-stream
--                     , random
--     default-language: Haskell2010

test-suite fractal-stream-test
    import:           warnings, extensions
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    base >= 4.17.0.0 && < 5
                    , fractal-stream
                    , hspec >= 2.10 && < 3
