cabal-version: 2.2
name: idn
version: 0.1.1.0
synopsis: Pure Haskell IDN and Punycode implementation
description: 
    Pure Haskell implementation of Internationalized Domain Names (IDN)
    following IDNA2008 specification (RFC 5890-5893), including Punycode (RFC 3492).
    Provides both high-level domain name processing and low-level Punycode encoding.
license: BSD-3-Clause
license-file: LICENSE
author: Ian Duncan
maintainer: ian@iankduncan.com
category: Text, Web
build-type: Simple
tested-with: GHC ==9.6.6

extra-source-files:
  data/unicode/DerivedBidiClass.txt
  data/unicode/UnicodeData.txt
  data/unicode/DerivedJoiningType.txt
  data/unicode/Scripts.txt

library
  exposed-modules:
      Data.Text.Punycode
    , Data.Text.IDN
    , Data.Text.IDN.Types
    , Data.Text.IDN.Internal.Unicode
    , Data.Text.IDN.Internal.Validation
    , Data.Text.IDN.Internal.Punycode
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat
  build-depends:
      base >= 4.18 && < 5
    , text >= 2.0
    , bytestring >= 0.11
    , containers >= 0.6
    , file-embed >= 0.0.15
    , deepseq
    , vector >= 0.12
    , vector-algorithms >= 0.8
    , primitive >= 0.7

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Data.Text.IDNSpec
    , Data.Text.PunycodeSpec
    , Data.Text.IDN.Internal.UnicodeSpec
    , Data.Text.IDN.Internal.ValidationSpec
    , Data.Text.IDN.PropertySpec
    , Data.Text.IDN.BidiSpec
    , Data.Text.IDN.RFC5893Spec
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
      hspec-discover:hspec-discover >= 2.0
  build-depends:
      base
    , idn
    , text
    , hspec >= 2.0
    , QuickCheck

benchmark bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmark
  default-language: Haskell2010
  ghc-options: -Wall -O2
  build-depends:
      base
    , idn
    , text
    , criterion
    , QuickCheck
    , deepseq

